# solipr

./: .ignore  Cargo.toml  LICENSE  README.md  bacon.toml  file-manager.wit  rustfmt.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: approve.yml  rust.yml
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: change.rs  lib.rs  registry.rs  repository.rs  storage.rs
crates/core/src/repository/: diff.rs  file.rs  graph.rs  head.rs  linear.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: config.rs  daemon.rs  main.rs
crates/daemon/src/daemon/: network.rs
crates/fjall/: Cargo.toml
crates/fjall/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs  registry.rs
crates/network/: Cargo.toml
crates/network/examples/: console.rs
crates/network/src/: address.rs  lib.rs  main.rs
crates/persistent/: Cargo.toml
crates/persistent/src/: lib.rs  registry.rs  repository.rs
crates/plugin/: Cargo.toml
crates/plugin-binary/: Cargo.toml
crates/plugin-binary/src/: lib.rs
crates/plugin/src/: guest.rs  host.rs  lib.rs
crates/snapshot-plugin/: Cargo.toml
crates/snapshot-plugin/src/: lib.rs
crates/solipr/: Cargo.toml
crates/solipr/src/: identifier.rs  lib.rs  main.rs  plugin.rs  repository.rs  storage.rs
crates/stack/: Cargo.toml
crates/stack/src/: lib.rs  vec.rs
crates/storage/: Cargo.toml
crates/tests/: Cargo.toml
crates/tests/src/: lib.rs  registry.rs  repository.rs
crates/tests/src/repository/: file.rs  head.rs  registry.rs
docs/: ovg.md  svg.md
src/: change.rs  config.rs  identifier.rs  lib.rs  memory.rs  plugin.rs  registry.rs  repository.rs  serializer.rs  stack.rs  storage.rs
src/plugin/: guest.rs  host.rs
src/registry/: memory.rs  persistent.rs
src/repository/: persistent.rs
wit/: file-plugin.wit  plugin.wit
