[package]
name = "solipr"
version = "0.0.1"
description = "A purely Rust-based Version Control System"
repository = "https://github.com/solipr/solipr"
readme = "README.md"
license = "MIT"
keywords = ["vcs"]
categories = ["development-tools"]
edition = "2024"

[dependencies]
anyhow = "1.0.96"
fjall = "2.6.7"
thiserror = "2.0.11"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
missing_docs_in_private_items = "warn"
arithmetic_side_effects = "warn"
as_conversions = "warn"
unwrap_used = "warn"
expect_used = "warn"
