[package]
name = "solipr"
version = "0.0.1"
description = "A purely Rust-based Version Control System"
repository = "https://github.com/solipr/solipr"
readme = "README.md"
license = "MIT"
keywords = ["vcs"]
categories = ["development-tools"]
edition = "2024"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde-inline-default = "0.2.3"
uuid = { version = "1.15.1", features = ["v7"] }
anyhow = "1.0.96"
sha2 = "0.10.8"
fjall = "2.6.7"
bs58 = "0.5.1"
directories = "6.0.0"
config = "0.15.8"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_docs_in_private_items = "warn"
arithmetic_side_effects = "warn"
indexing_slicing = "warn"
as_conversions = "warn"
unwrap_used = "warn"
expect_used = "warn"
