[workspace]
members = ["crates/*"]

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_docs_in_private_items = "warn"
arithmetic_side_effects = "warn"
indexing_slicing = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
unwrap_used = "warn"
expect_used = "warn"
