[package]
name = "solipr-config"
version = "0.0.1"
description = "The main configuration of Solipr"
repository = "https://github.com/solipr/solipr"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["vcs"]
categories = ["development-tools"]
edition = "2021"

[dependencies]
libp2p = { git = "https://github.com/libp2p/rust-libp2p.git" }
serde = { version = "1.0.217", features = ["derive"] }
serde-inline-default = "0.2.3"
serde_bytes = "0.11.15"
directories = "5.0.1"
config = "0.15.4"

[lints]
workspace = true
