[package]
name = "solipr-core"
version = "0.0.1"
description = "The core data structures of Solipr"
repository = "https://github.com/solipr/solipr"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["vcs"]
categories = ["development-tools"]
edition = "2021"

[dependencies]
solipr-stack = { path = "../stack", features = ["borsh"] }
uuid = { version = "1.11.0", features = ["borsh"] }
borsh = { version = "1.5.1", features = ["derive"] }
thiserror = "2.0.4"
similar = "2.6.0"
base64 = "0.22.1"
sha2 = "0.10.8"
petgraph = "0.6.5"

[lints]
workspace = true
