[package]
name = "solipr-daemon"
version = "0.0.1"
description = "The Solipr daemon"
repository = "https://github.com/solipr/solipr"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["vcs"]
categories = ["development-tools"]
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42.0", features = [
    "rt-multi-thread",
    "macros",
    "signal",
] }
libp2p = { git = "https://github.com/libp2p/rust-libp2p.git", features = [
    "tokio",
    "macros",
    "quic",
    "upnp",
    "identify",
] }
serde-inline-default = "0.2.3"
directories = "5.0.1"
lazy_static = "1.5.0"
config = "0.15.4"
axum = "0.8.1"
anyhow = "1.0.95"
keyring = { version = "3.6.1", features = [
    "apple-native",
    "linux-native",
    "windows-native",
] }
whoami = "1.5.2"

[lints]
workspace = true
