[package]
name = "solipr-plugin-binary"
version = "0.0.1"
description = "A plugin that manages binary files in Solipr"
repository = "https://github.com/solipr/solipr"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["vcs"]
categories = ["development-tools"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
solipr-plugin = { path = "../plugin" }
borsh = { version = "1.5.3", features = ["derive"] }
