[package]
name = "solipr-plugin"
version = "0.0.1"
description = "An utility to create Solipr plugins"
repository = "https://github.com/solipr/solipr"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["vcs"]
categories = ["development-tools"]
edition = "2021"

[dependencies]
wit-bindgen = "0.36.0"
base64 = "0.22.1"
sha3 = "0.10.8"
