[package]
name = "solipr-plugin"
version = "0.0.1"
description = "The plugin system of Solipr"
repository = "https://github.com/solipr/solipr"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["vcs"]
categories = ["development-tools"]
edition = "2021"

[dependencies]
solipr-macros = { path = "../macros" }
serde = "1.0.217"
bincode = "1.3.3"
wasmtime = { version = "30.0.0", optional = true }
anyhow = { version = "1.0.95", optional = true }
linkme = { version = "0.3.31", optional = true }

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full"] }

[features]
host = ["dep:wasmtime", "dep:anyhow", "dep:linkme"]
guest = []

[lints]
workspace = true
