[package]
name = "solipr"
version = "0.0.1"
description = "A purely Rust-based Version Control System"
repository = "https://github.com/solipr/solipr"
readme = "README.md"
license = "MIT"
keywords = ["vcs"]
categories = ["development-tools"]
edition = "2024"

[dependencies]
uuid = { version = "1.15.1", features = ["borsh", "v7"] }
borsh = { version = "1.5.5", features = ["derive"] }
anyhow = "1.0.97"
sha2 = "0.10.8"
fjall = { version = "2.6.7", default-features = false, features = [
    "lz4",
    "ssi_tx",
] }
bs58 = "0.5.1"
wasmtime = "30.0.2"

[lints]
workspace = true
