[package]
name = "solipr"
version = "0.0.1"
description = "A purely Rust-based Version Control System"
repository = "https://github.com/solipr/solipr"
readme = "README.md"
license = "MIT"
keywords = ["vcs"]
categories = ["development-tools"]
edition = "2024"

[dependencies]
uuid = { version = "1.16.0", features = ["borsh", "v7"] }
borsh = { version = "1.5.6", features = ["derive"] }
anyhow = "1.0.97"
sha2 = "0.10.8"
bs58 = "0.5.1"
wasmtime = "30.0.2"
redb = "2.4.0"
clap = { version = "4.5.32", features = ["derive"] }
wit-component = "0.227.1"
wasmtime-wasi = "30.0.2"

[lints]
workspace = true
