[package]
name = "solipr-stack"
version = "0.0.1"
description = "A collection of data structures without any allocations for Solipr"
repository = "https://github.com/solipr/solipr"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["vcs"]
categories = ["development-tools"]
edition = "2021"

[dependencies]
borsh = { version = "1.5.1", features = ["derive"], optional = true }

[features]
borsh = ["dep:borsh"]

[lints]
workspace = true
