[package]
name = "solipr-storage"
version = "0.0.1"
description = "The storage system for Solipr"
repository = "https://github.com/solipr/solipr"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["vcs"]
categories = ["development-tools"]
edition = "2021"

[dependencies]
solipr-core = { path = "../core" }
fjall = "2.6.5"
thiserror = "2.0.11"

[lints]
workspace = true
