[package]
name = "solipr-tests"
version = "0.0.1"
description = "A collection of tests for the Solipr library"
repository = "https://github.com/solipr/solipr"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["vcs"]
categories = ["development-tools"]
edition = "2021"

[dev-dependencies]
solipr-core = { path = "../core" }
solipr-stack = { path = "../stack" }
solipr-persistent = { path = "../persistent" }
solipr-memory = { path = "../memory" }
tempfile = "3.13.0"
rand = "0.8.5"
